[gd_scene load_steps=5 format=3 uid="uid://4tficuq7g8p1"]

[ext_resource type="Script" uid="uid://b7y0sf0u00deq" path="res://Scripts/Classes/TextBox.gd" id="1_ui8g0"]
[ext_resource type="LabelSettings" uid="uid://ggev7xuxhj1t" path="res://Resources/Fonts/TextBoxFont.tres" id="3_ui8g0"]

[sub_resource type="Gradient" id="Gradient_lgpka"]
offsets = PackedFloat32Array(0.503185, 0.745223, 0.901274, 1)
colors = PackedColorArray(0.196078, 0.196078, 0.196078, 0.705882, 0.392157, 0.392157, 0.392157, 0.470588, 0.784314, 0.784314, 0.784314, 0.117647, 0.862745, 0.862745, 0.862745, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ui8g0"]
gradient = SubResource("Gradient_lgpka")
fill_from = Vector2(1, 0.679487)

[node name="TextBox" type="TextureRect"]
self_modulate = Color(0.114897, 0.114897, 0.114897, 0.588235)
custom_minimum_size = Vector2(750, 225)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -175.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
texture = SubResource("GradientTexture2D_ui8g0")
script = ExtResource("1_ui8g0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 1
label_settings = ExtResource("3_ui8g0")
vertical_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LineLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_vertical = 1
label_settings = ExtResource("3_ui8g0")
vertical_alignment = 1
autowrap_mode = 2

[node name="TypingTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="TypingTimer" to="." method="_on_typing_timer_timeout"]
